--- a/exposurenotification/build.gradle
+++ b/exposurenotification/build.gradle
@@ -109,7 +109,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Java 8 backports
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
 
     // AutoValue Dependencies
     api "com.google.auto.value:auto-value-annotations:1.7.3"
@@ -121,7 +121,10 @@ dependencies {
     // Guava dependency
     api "com.google.guava:guava:29.0-android"
 
-    api "androidx.core:core:1.3.0"
+    // JODA
+    api 'joda-time:joda-time:2.9.4'
+
+    api "androidx.core:core:1.3.1"
     implementation "androidx.annotation:annotation:1.1.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
