--- a/exposurenotification/build.gradle
+++ b/exposurenotification/build.gradle
@@ -14,19 +14,25 @@
  * limitations under the License.
  */
 
+import org.apache.tools.ant.taskdefs.condition.Os
 apply plugin: 'com.android.library'
 apply plugin: 'com.google.protobuf'
 
 /*
  * This library has dependencies upon a few other pieces of code, most notably NanoPB and
- * BoringSSL. In my project setup, I've placed the dependencies off of my home directory. Their
- * actual roots can be anywhere, but the paths should be updated below if they are not kept
- * together under this root.
- * TODO: Update these paths to the dependency roots.
+ * BoringSSL. In order to compile this project, you must run the following bash scripts:
+ * $ bash third_party/nanopb/download.sh
+ * $ bash third_party/boringssl/build-android.sh
  */
-def depsRoot = "${System.properties['user.home']}/Projects"
-def boringSslRoot = "${depsRoot}/boringssl"
-def nanopbRoot = "${depsRoot}/nanopb-0.4.2-macosx-x86"
+def nanoPbRoot
+if (Os.isFamily(Os.FAMILY_MAC)) {
+    nanoPbRoot = file("${rootDir}/third_party/nanopb/macosx").absolutePath
+} else if (Os.isFamily(Os.FAMILY_UNIX)) {
+    nanoPbRoot = file("${rootDir}/third_party/nanopb/linux").absolutePath
+} else if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    nanoPbRoot = file("${rootDir}/third_party/nanopb/windows").absolutePath
+}
+def boringSslRoot = file("${rootDir}/third_party/boringssl/").absolutePath
 
 android {
     compileSdkVersion 29
@@ -50,20 +56,20 @@ android {
         consumerProguardFiles "consumer-rules.pro"
 
         /*
-         * BORING_SSL_ROOT: location of the BoringSSL project root from
-         * https://boringssl.googlesource.com/boringssl/
-         *
-         * NANOPB_ROOT: location of NanoPB downloaded from https://jpa.kapsi.fi/nanopb/download/
+         * - BORING_SSL_ROOT: location of the BoringSSL project root from
+         *     https://boringssl.googlesource.com/boringssl/
+         * - NANOPB_ROOT: location of NanoPB downloaded from
+         *     https://jpa.kapsi.fi/nanopb/download/
          */
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++14"
-                arguments "-DBORING_SSL_ROOT=${boringSslRoot}",
-                        "-DNANOPB_ROOT=${nanopbRoot}"
+                arguments "-DBORING_SSL_ROOT=${boringSslRoot}", "-DNANOPB_ROOT=${nanoPbRoot}"
             }
         }
         ndk {
-            abiFilters "arm64-v8a", "x86"
+            // Explicitly set the supported ABI flavours
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86"
         }
     }
 
@@ -93,7 +99,7 @@ protobuf {
         artifact = 'com.google.protobuf:protoc:3.11.4'
     }
     dependencies {
-        protobuf files("${depsRoot}/nanopb-0.3.9.2-macosx-x86/generator/proto/")
+        protobuf files("${nanoPbRoot}/generator/proto/")
     }
     generateProtoTasks {
         all().each { task ->
