--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
+    ndkVersion "21.3.6528147"
 
     defaultConfig {
         applicationId "com.google.samples.ensnippets"
