--- a/exposurenotification/build.gradle
+++ b/exposurenotification/build.gradle
@@ -37,6 +37,7 @@ def boringSslRoot = file("${rootDir}/third_party/boringssl/").absolutePath
 android {
     compileSdkVersion 29
     buildToolsVersion "30.0.0"
+    ndkVersion "21.3.6528147"
 
     compileOptions {
         // Flag to enable support for the new language APIs
@@ -105,6 +106,7 @@ protobuf {
         all().each { task ->
             task.builtins {
                 java {
+                    option "lite"
                 }
             }
         }
@@ -122,7 +124,7 @@ dependencies {
     annotationProcessor "com.google.auto.value:auto-value:1.7.3"
 
     // Protobuf dependency
-    implementation 'com.google.protobuf:protobuf-java:3.11.4'
+    implementation 'com.google.protobuf:protobuf-javalite:3.11.4'
 
     // Guava dependency
     api "com.google.guava:guava:29.0-android"
