--- a/exposurenotification/build.gradle
+++ b/exposurenotification/build.gradle
@@ -132,6 +132,9 @@ dependencies {
     // JODA
     api 'joda-time:joda-time:2.9.4'
 
+    // Play Core library, so we don't have to reimplement the basics such as Task
+    implementation 'com.google.android.play:core:1.8.0'
+
     api "androidx.core:core:1.3.1"
     implementation "androidx.annotation:annotation:1.1.0"
 
